fixed choices overlapping with solution modal

--- a/components/corespring/drag-and-drop/src/client/styles.css
+++ b/components/corespring/drag-and-drop/src/client/styles.css
@@ -34,7 +34,7 @@
     margin: 3px 3px 1px 1px;
     padding: 8px;
     text-align: center;
-    z-index: 3323900;
+    z-index: 1040;
 }
 .view-drag-and-drop .choice:hover {
     box-shadow: 0px 0px 5px #000;
